# cltorch

./: .gitignore  .gitmodules  .travis.yml  1  Bernoulli.lua  CMakeLists.txt  LICENSE  README.md  Random.lua  Storage.c  Storage.cpp  Tensor.c  Tensor.lua  TensorMath.lua  TensorOperator.c  Test.lua  init.c  init.cpp  init.lua  run-test-copy.sh  run-test-device.sh  run-test-perf.sh  run-test-storage.sh  run-test-tensor.sh  run-test.sh  run-unit-storage.lua  run-unit-storage.sh  run-unit-tensor.lua  run-unit-tensor.sh  run-unittests.sh  share  test_sort.lua
CMakeModules/: build_DeepCL.cmake  build_EasyCL.cmake  build_clBLAS.cmake
doc/: ContributorGuidelines.md  ImplementedDetails.md  MigrateStatusByFile.md  OlderChanges.md  nn-operators.md
doc/torch/: cuda-to-opencl.md  cutorch-apply.md  torch.md
lib/THCl/: CMakeLists.txt  THCl.h  THClApply.cl  THClApply.cpp  THClApply.h  THClApply1.cl  THClApply2.cl  THClApply3.cl  THClApplyD.cl  THClApplyDv2.cl  THClApplyV3.cl  THClBlas.cpp  THClBlas.h  THClDeviceUtils.cl  THClDeviceUtils.cpp  THClDeviceUtils.h  THClGather.cl  THClGather.cpp  THClGeneral.c  THClGeneral.cpp  THClGeneral.h  THClKernels.cpp  THClKernels.h  THClOperators.h  THClReduce.cl  THClReduce.cpp  THClReduce.h  THClReduceAll.cl  THClReduceAll.cpp  THClReduceAll.h  THClReduceApplyUtils.cl  THClReduceApplyUtils.cpp  THClReduceApplyUtils.h  THClScatter.cl  THClScatter.cpp  THClStorage.c  THClStorage.cpp  THClStorage.h  THClStorageCopy.c  THClStorageCopy.cpp  (+28 more)
lib/THCl/maybe_superfluous/: THClReduce.cpp  THClReduce.h  THClReduce_baked.cl  THClReduce_finish.cl
rocks/: clnn-scm-1.rockspec  cltorch-scm-1.rockspec
src/: CMakeLists.txt  FFI.lua  Random.lua  Storage.cpp  Tensor.cpp  Tensor.lua  TensorMath.lua  Test.lua  UserKernel.cpp  UserKernel.h  init.cpp  init.lua
src/CMakeModules/: build_EasyCL.cmake  build_clBLAS.cmake
src/THCl/: THClApply.cl  THClOperators.h  THClReduce.cpp  THClReduceAll.cl  THClReduceAll.cpp  THClReduceApplyUtils.cl  THClReduceApplyUtils.cpp  THClScatter.cl  THClStorage.h  THClStorageCopy.cpp  THClStorageCopy.h  THClTensorIndex.cpp  THClTensorMath.h  THClTensorMathScan.cpp  THClTensorMathTransformReduce.cl  THClTensorMathTransformReduce.cpp
src/cmake/: build_EasyCL.cmake  build_clBLAS.cmake
src/lib/: CMakeLists.txt  THClApply.cl  THClApply.cpp  THClApply.h  THClBlas.cpp  THClBlas.h  THClDebug.cpp  THClDebug.h  THClDeviceUtils.cl  THClDeviceUtils.cpp  THClDeviceUtils.h  THClGather.cpp  THClGeneral.cpp  THClGeneral.h  THClKernels.cpp  THClKernels.h  THClOperators.h  THClReduce.cl  THClReduce.cpp  THClReduce.h  THClReduceAll.cl  THClReduceAll.cpp  THClReduceAll.h  THClReduceApplyUtils.cl  THClReduceApplyUtils.cpp  THClReduceApplyUtils.h  THClScatter.cpp  THClSortUtils.cl  THClSortUtils.cpp  THClSortUtils.h  THClStorage.cpp  THClStorage.h  THClStorageGet.cl  THClStorageSet.cl  THClTensor.cpp  THClTensor.h  THClTensorCopy.cpp  THClTensorIndex.cl  THClTensorIndex.cpp  THClTensorInfoCl.cl  (+18 more)
src/test/: run-test-device.sh  test-perf.lua  test-tensor.lua  test-zsh.zsh  test_userkernel.lua  testroworderblas.cpp  unit_storage.lua  unit_tensor.lua
src/torch/generic/: Storage.cpp  Tensor.c  Tensor.cpp
src/travis/: install-torch.sh
src/util/: port.py
test/: cltorch-tests.lua  cltorch-unit-storage.lua  cltorch-unit-tensor.lua  run-test-perf.sh  run-test-tensor.sh  test-copy.lua  test-device.lua  test-perf.lua  test-save.lua  test-storage.lua  test-tensor.lua  test.lua  unit_storage.lua  unit_tensor.lua
torch/: utils.c  utils.h
torch/generic/: Storage.c  Storage.cpp  Tensor.c
util/: port.py
